--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "input_folder_path": "/sourcedata/",
+    "input_folder_path": "/practicedata/",
     "output_folder_path": "/ingesteddata/",
     "test_data_path": "/testdata/",
-    "output_model_path": "/models/",
+    "output_model_path": "/practicemodels/",
     "prod_deployment_path": "/production_deployment/",
     "logs_folder_path": "/logs/"
 }
